--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^1.0.4",
+    "@react-email/render": "^0.0.17",
     "@stripe/stripe-js": "^2.4.0",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.39.0",
-    "@react-email/components": "^1.0.4",
-    "clsx": "^2.1.0",
     "canvas-confetti": "^1.9.3",
+    "clsx": "^2.1.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.3.0",
     "framer-motion": "^11.0.3",
