--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.9.0",
     "@types/crypto-js": "^4.2.0",
     "@types/node": "^20.11.0",
     "@types/qrcode": "^1.5.5",
